# turboquant-research

./: .gitignore  README.md  prd.json  progress.txt  ralph.sh
research/: 01-shannon-source-coding.md  02-hypersphere-distributions.md  03-lloyd-max-quantization.md  04-qjl-transform.md  05-mse-vs-inner-product-bias.md  06-turboquant-mse-algorithm.md  07-turboquant-prod-algorithm.md  08-lower-bounds-optimality.md  09-rabitq-normalization-codebook.md  10-rabitq-quantization.md  11-rabitq-estimator-error-bound.md  12-rabitq-query-computation.md  13-rabitq-fastscan-simd.md  14-rabitq-ivf-integration.md  15-rabitq-implementation-analysis.md  16-glm5-kv-cache.md  17-deepseek-kv-cache.md
src/: CMakeLists.txt  README.md  defines.hpp  rabitq_distance.cpp  rabitq_distance.hpp  rabitq_index.cpp  rabitq_index.hpp  rabitq_query.cpp  rabitq_query.hpp  rotation.cpp  rotation.hpp
src/tests/: test_rabitq_distance.cpp  test_rabitq_index.cpp  test_rabitq_query.cpp  test_rotation.cpp  test_setup.cpp
